--- a/public/index.html
+++ b/public/index.html
@@ -180,7 +180,7 @@
 
       var titles = []
       var getTitles = ()=>{
-        axios.get("/budget").then(function (res) {
+        axios.get("http://localhost:3040/budget").then(function (res) {
             for(var i=0;i<res.data.myBudget.length;i++){
                 titles.push(res.data.myBudget[i].title)
             }
@@ -311,7 +311,7 @@
       }
         
         function getBudget() {
-            axios.get('/budget')
+            axios.get('http://localhost:3040/budget')
             .then(function (res) {
                 console.log(res.data);
                 for (var i = 0; i < res.data.myBudget.length; i++) {
